cros: Fix TouchCalibrationController for --mus and --mash

For go/mustash management of touchscreens under ozone is moving into
the "mus" window server mojo service. When running chrome --mus (or
chrome --mash) code in //ash cannot use DeviceDataManager, since it
may live in another process.

Convert TouchCalibrationController and its unit tests to use
InputDeviceManager, which has an implementation that works with mus
and mash. Re-enable the tests and clean up DEPS.

Bug: 779118
Test: ash_unittests --mus and ash_unittests --mash
Change-Id: I533f9ea4146f37d1173ddeb9d2c480c64d0b445c